--- a/web/template/ACAP.css
+++ b/web/template/ACAP.css
@@ -51,6 +51,9 @@ a:hover.navv{
     box-shadow: 0px 3px 0px #ddb011;
 	transition-duration: 0.3s;
 }
+a:visited.navv{
+	text-decoration: none;
+}
 #u25101_img{
 	opacity: 0.1;
 	-ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=10)";
@@ -361,3 +364,9 @@ fieldset[disabled] .btn-success.focus {
   color: #5cb85c;
   background-color: #fff;
 }
+
+.form-control:focus {
+  border-color: #F5C316;
+  outline: 0;
+  -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgb(245, 195, 22);
+          box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgb(245, 195, 22);
